--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=cyrillic-ext" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
